# pkg/api/message.pb.validate.go
@@ -1,0 +1,606 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: message.proto
+
+package proto
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on User with the rules defined in the proto
+// definition for this message. If any rules are violated, the first error
+// encountered is returned, or nil if there are no violations.
+func (m *User) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on User with the rules defined in the
+// proto definition for this message. If any rules are violated, the result is
+// a list of violation errors wrapped in UserMultiError, or nil if none found.
+func (m *User) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *User) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if len(m.GetEmail()) > 256 {
+		err := UserValidationError{
+			field:  "Email",
+			reason: "value length must be at most 256 bytes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if !_User_Email_Pattern.MatchString(m.GetEmail()) {
+		err := UserValidationError{
+			field:  "Email",
+			reason: "value does not match regex pattern \"[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\\\.[a-zA-Z]{2,}\"",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if utf8.RuneCountInString(m.GetPassword()) < 3 {
+		err := UserValidationError{
+			field:  "Password",
+			reason: "value length must be at least 3 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if len(errors) > 0 {
+		return UserMultiError(errors)
+	}
+
+	return nil
+}
+
+// UserMultiError is an error wrapping multiple validation errors returned by
+// User.ValidateAll() if the designated constraints aren't met.
+type UserMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m UserMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m UserMultiError) AllErrors() []error { return m }
+
+// UserValidationError is the validation error returned by User.Validate if the
+// designated constraints aren't met.
+type UserValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e UserValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e UserValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e UserValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e UserValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e UserValidationError) ErrorName() string { return "UserValidationError" }
+
+// Error satisfies the builtin error interface
+func (e UserValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sUser.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = UserValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = UserValidationError{}
+
+var _User_Email_Pattern = regexp.MustCompile("[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}")
+
+// Validate checks the field values on TokenMessage with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *TokenMessage) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on TokenMessage with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in TokenMessageMultiError, or
+// nil if none found.
+func (m *TokenMessage) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *TokenMessage) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Token
+
+	if len(errors) > 0 {
+		return TokenMessageMultiError(errors)
+	}
+
+	return nil
+}
+
+// TokenMessageMultiError is an error wrapping multiple validation errors
+// returned by TokenMessage.ValidateAll() if the designated constraints aren't met.
+type TokenMessageMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m TokenMessageMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m TokenMessageMultiError) AllErrors() []error { return m }
+
+// TokenMessageValidationError is the validation error returned by
+// TokenMessage.Validate if the designated constraints aren't met.
+type TokenMessageValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TokenMessageValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TokenMessageValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TokenMessageValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TokenMessageValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TokenMessageValidationError) ErrorName() string { return "TokenMessageValidationError" }
+
+// Error satisfies the builtin error interface
+func (e TokenMessageValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTokenMessage.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TokenMessageValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TokenMessageValidationError{}
+
+// Validate checks the field values on Rank with the rules defined in the proto
+// definition for this message. If any rules are violated, the first error
+// encountered is returned, or nil if there are no violations.
+func (m *Rank) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on Rank with the rules defined in the
+// proto definition for this message. If any rules are violated, the result is
+// a list of violation errors wrapped in RankMultiError, or nil if none found.
+func (m *Rank) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *Rank) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Date
+
+	if len(errors) > 0 {
+		return RankMultiError(errors)
+	}
+
+	return nil
+}
+
+// RankMultiError is an error wrapping multiple validation errors returned by
+// Rank.ValidateAll() if the designated constraints aren't met.
+type RankMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m RankMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m RankMultiError) AllErrors() []error { return m }
+
+// RankValidationError is the validation error returned by Rank.Validate if the
+// designated constraints aren't met.
+type RankValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e RankValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e RankValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e RankValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e RankValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e RankValidationError) ErrorName() string { return "RankValidationError" }
+
+// Error satisfies the builtin error interface
+func (e RankValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sRank.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = RankValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = RankValidationError{}
+
+// Validate checks the field values on KeyPhrase with the rules defined in the
+// proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *KeyPhrase) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on KeyPhrase with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in KeyPhraseMultiError, or nil
+// if none found.
+func (m *KeyPhrase) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *KeyPhrase) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Text
+
+	if len(errors) > 0 {
+		return KeyPhraseMultiError(errors)
+	}
+
+	return nil
+}
+
+// KeyPhraseMultiError is an error wrapping multiple validation errors returned
+// by KeyPhrase.ValidateAll() if the designated constraints aren't met.
+type KeyPhraseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m KeyPhraseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m KeyPhraseMultiError) AllErrors() []error { return m }
+
+// KeyPhraseValidationError is the validation error returned by
+// KeyPhrase.Validate if the designated constraints aren't met.
+type KeyPhraseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e KeyPhraseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e KeyPhraseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e KeyPhraseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e KeyPhraseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e KeyPhraseValidationError) ErrorName() string { return "KeyPhraseValidationError" }
+
+// Error satisfies the builtin error interface
+func (e KeyPhraseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sKeyPhrase.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = KeyPhraseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = KeyPhraseValidationError{}
+
+// Validate checks the field values on RankingResp with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *RankingResp) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on RankingResp with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in RankingRespMultiError, or
+// nil if none found.
+func (m *RankingResp) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *RankingResp) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Token
+
+	for idx, item := range m.GetKeyPhrases() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, RankingRespValidationError{
+						field:  fmt.Sprintf("KeyPhrases[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, RankingRespValidationError{
+						field:  fmt.Sprintf("KeyPhrases[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return RankingRespValidationError{
+					field:  fmt.Sprintf("KeyPhrases[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return RankingRespMultiError(errors)
+	}
+
+	return nil
+}
+
+// RankingRespMultiError is an error wrapping multiple validation errors
+// returned by RankingResp.ValidateAll() if the designated constraints aren't met.
+type RankingRespMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m RankingRespMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m RankingRespMultiError) AllErrors() []error { return m }
+
+// RankingRespValidationError is the validation error returned by
+// RankingResp.Validate if the designated constraints aren't met.
+type RankingRespValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e RankingRespValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e RankingRespValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e RankingRespValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e RankingRespValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e RankingRespValidationError) ErrorName() string { return "RankingRespValidationError" }
+
+// Error satisfies the builtin error interface
+func (e RankingRespValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sRankingResp.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = RankingRespValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = RankingRespValidationError{}
